--- a/GithubAPI-WorkingHour/Views/Repository/Index.cshtml
+++ b/GithubAPI-WorkingHour/Views/Repository/Index.cshtml
@@ -1,45 +1,49 @@
-﻿@model List<GithubAPI_WorkingHour.Models.RepositoryModel>
+﻿@model Core.Entities.RepositoryModelWithMaxLength
 @{
     ViewData["Title"] = "Repolar";
 }
-
 <div class="container-fluid px-6 py-4">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-12">
-            <table class="table table-responsive" id="datatable">
-                <thead>
-                    <tr>
-                        <th>Repo Name</th>
-                        <th>Toplam Çalışma Süresi</th>
-                        @foreach (var item in Model)
-                        {
-                            foreach (var issue in item.RepositoryWorkingDays)
+            <div class="card">
+                <div class="card-body">
+                    <table class="table table-responsive table-hover" id="repoTable" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>Repository Adı</th>
+                                <th>Toplam Çalışma Saati</th>   
+                                @foreach (var model in Model.Repository)
+                                {
+                                    @foreach (var dates in model.RepositoryWorkingDays)
+                                    {
+                                        <th>@dates.Date.Date.ToShortDateString()</th>
+                                    }
+                                }
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var repository in Model.Repository)
                             {
-                                <th>@issue.Date.ToShortDateString()</th>
+                                <tr>
+                                    <td><a href="@Url.Action("GetRepositoryWorkingHourWithUser","Repository",new {name=repository.Name,owner=repository.Owner})">@repository.Name</a></td>
+                                    <td>@repository.TotalWorkingHour</td>
+                                   
+                                        @foreach (var dates in repository.RepositoryWorkingDays)
+                                        {
+                                            <td>@dates.TotalWorkingHour</td>
+                                        }
+
+                                </tr>
                             }
-                        }
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>@item.Repository.Name</td>
-                            <td>@item.TotalWorkingHour</td>
-                            @foreach (var issue in item.RepositoryWorkingDays)
-                            {
-                                <td>@issue.TotalWorkingHour</td>
-                            }
-                        </tr>
-                    }
-                </tbody>
-            </table>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
+@section scripts{
 <script>
-    $(document).ready(function() {
-    $('#datatable').DataTable();
-} );
+    $('#repoTable').DataTable();
 </script>
+}
