--- a/GithubAPI-WorkingHour/Views/Shared/_Layout.cshtml
+++ b/GithubAPI-WorkingHour/Views/Shared/_Layout.cshtml
@@ -106,6 +106,7 @@
     <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
     <script src="~/js/theme.min.js"></script>
+    <script src="~/js/master.js"></script>
     @await RenderSectionAsync("scripts", false)
 </body>
 </html>
