--- a/GithubAPI-WorkingHour/Views/Repository/GetRepositoryWorkingHourWithUser.cshtml
+++ b/GithubAPI-WorkingHour/Views/Repository/GetRepositoryWorkingHourWithUser.cshtml
@@ -1,47 +1,57 @@
-﻿@model Core.Entities.GetRepositoryHourWithUserModel
+﻿@model List<IGrouping<string,Core.Entities.GetRepoWithUser>>
+@{
+    ViewData["Title"] = "Repolar";
+}
 <div class="container-fluid px-6 py-4">
     <div class="row">
         <div class="col-lg-12 col-md-12 col-12">
             <div class="card">
+                <div class="card-header">
+                    <h4 >
+                        @{
+                            Core.Entities.GetRepoWithUser first = null;
+                            foreach (var user in Model.Select(x => x.ToList()).FirstOrDefault())
+                            {
+                                first = user;
+                                break;
+                            }
+                        }
+                        @first.Repository.Name
+                    </h4>
+                </div>
                 <div class="card-body">
-                    <h4 class="">@Model.Repository.Name</h4>
-                    <table class="table table-hover table-responsive">
+                    <table class="table table-responsive" id="repoTable" style="width: 100%">
                         <thead>
                         <tr>
-                            <th></th>
-                        @foreach (var item in Model.WorkingHourUser)
-                        {
-                            @foreach (var result in item.ToList().GroupBy(x => x.RepositoryWorkingDays))
-                            {
 
-                              @foreach (var result1 in result)
-                              {
-                                  foreach (var result2 in result1.RepositoryWorkingDays)
-                                  {
-                                      <th>@result2.Date.ToShortDateString()</th>
-                                  }
-                              }
-
-
-
-
-
-                            }
-
-                        }
+                            <th>Kullancıcı Adı</th>
+                            <th>Toplam Çalışma Saati</th>
                         </tr>
                         </thead>
                         <tbody>
-                        @foreach (var item in Model.WorkingHourUser)
+                        @foreach (var item in Model)
                         {
+                            <tr>
+                                <th class="">
+                                    <div class="d-flex  align-items-center">
+                                        <div>
+                                            <div class="icon-shape icon-md border p-4 rounded bg-primary">
+                                                <img width="40" height="40" src="@item.FirstOrDefault(x => x.UserName == item.Key).User.AvatarUrl" alt="">
+                                            </div>
+                                        </div>
+                                        <div class="ms-3 lh-1">
+                                            <h5 class="fw-bold mb-1">
+                                                <a href="@item.FirstOrDefault(x => x.UserName == item.Key).User.HtmlUrl" class="text-inherit">@item.Key</a>
+                                            </h5>
+                                        </div>
+                                    </div>
+                                </th>
+                                @{
+                                    var calcMunites = TimeSpan.FromMinutes(item.ToList().Sum(x => x.WorkingHour));
+                                }
 
-                            var user = item.GroupBy(x=>x.User.AvatarUrl);
-                            @foreach (var u in user)
-                            {
-                                <tr>
-                                    <td><img src="@u.Key" class="avatar-lg rounded-circle border border-4 border-white-color-40"/> @item.Key</td>
-                                </tr>
-                            }
+                                <th>@Html.Raw(string.Format("{0:00} Saat {1:00} Dakika", (int) calcMunites.TotalHours, calcMunites.Minutes))</th>
+                            </tr>
                         }
                         </tbody>
                     </table>
@@ -50,4 +60,8 @@
         </div>
     </div>
 </div>
-
+@section scripts{
+<script>
+    $('#repoTable').DataTable();
+</script>
+}
