--- a/GithubAPI-WorkingHour/Views/Shared/_Layout.cshtml
+++ b/GithubAPI-WorkingHour/Views/Shared/_Layout.cshtml
@@ -45,17 +45,14 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link has-arrow " href="@Url.Action("Index","Repository")">
-                            <i data-feather="home" class="nav-icon icon-xs me-2"></i>  Repository
+                            <i data-feather="git-branch" class="nav-icon icon-xs me-2"></i>  Repository
                         </a>
                     </li>
-
-               
-                   
-                  
-                  
-                   
-                  
-                  
+                          <li class="nav-item">
+                        <a class="nav-link has-arrow " href="@Url.Action("Index","User")">
+                            <i data-feather="users" class="nav-icon icon-xs me-2"></i>  Geliştiriciler
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
